# forge

./: .gitignore  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
server/: .dockerignore  Cargo.toml  Dockerfile  fly.toml
server/src/: analyze.rs  format.rs  handlers.rs  lexer.rs  main.rs  model.rs
web/: package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/motion/: AnimatedNumber.tsx  Reveal.tsx
web/components/nav/: Navbar.tsx  ThemeToggle.tsx
web/components/playground/: DiagnosticsPanel.tsx  Editor.tsx  MetricsBar.tsx  Toolbar.tsx
web/components/sections/: About.tsx  Features.tsx  Footer.tsx  Hero.tsx  Playground.tsx
web/lib/: constants.ts
web/lib/api/: client.ts  types.ts
web/lib/hooks/: useAnalyzer.ts  usePrefersReducedMotion.ts  useScrollSpy.ts  useTheme.tsx
